<resources>

    <!-- General -->
    <string name="app_name">Exposure</string>
    <string name="app_logo">App logo.</string>

    <!-- Sign up and Log in -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign up</string>
    <string name="terms_and_service_agreement">Click here to accept the Terms of Service and Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>

    <!-- Fragments -->
    <string name="map">Map</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>

    <!-- Profile Page and Edit Profile Page -->
    <string name="edit">EDIT</string>
    <string name="studied_at">Studied at</string>
    <string name="lived_in">Lived in</string>
    <string name="hobbies">Hobbies</string>
    <string name="personality">Personality</string>
    <string name="lies">Lies</string>
    <string name="truths">Truths</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="add_profile_picture">Add a profile picture</string>
    <string name="nickname">Nickname</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_hint">01/01/2000</string>
    <string name="bio">Bio</string>
    <string name="contact_information">Contact Information</string>
    <string name="phone">Phone</string>
    <string name="about_you">About You</string>
    <string name="pictures">Pictures</string>
    <string name="display_name">Display Name</string>
    <string name="age">Age</string>
    <string name="interested_in">Interested in</string>
    <string name="preferences">Preferences</string>
    <string name="males">Males</string>
    <string name="females">Females</string>
    <string name="others">Others</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="update">Update</string>
    <string name="add_item">Add item.</string>
    <string name="update_location">Update Location</string>
    <string name="upload_image_button">Upload image button.</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="take_photo">Take photo</string>
    <string name="logout">Logout</string>

    <!-- Chats Page -->
    <string name="search">Search</string>
    <string name="message_placeholder">Aa</string>
    <string name="open_chat_button">Open chat button.</string>
    <string name="message_open_button">Message open button.</string>
    <string name="send_button">Send button.</string>

    <!-- Maps Page -->
    <string name="fifteen_plus_km">15+ KM</string>
    <string name="nine_km">9 – 15 KM</string>
    <string name="six_km">6 – 8 KM</string>
    <string name="three_km">3 – 5 KM</string>
    <string name="zero_km">0 – 2 KM</string>
    <string name="map_you">YOU</string>

    <!-- Game and Other User's Profile Page -->
    <string name="connect">Connect</string>
    <string name="play_game">Play</string>
    <string name="continue_to_next">Continue</string>
    <string name="game_3t1l_title">3 Truths and 1 Lie</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_caught_the_lie">You caught the lie! You have unlocked the following information about your match:</string>
    <string name="game_back_button">Game back button.</string>
    <string name="oh_no">Oh No!</string>
    <string name="you_missed_the_lie">You missed the lie. Better luck next time.</string>

</resources>