<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/loss_dialog_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="36dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/loss_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:text="@string/oh_no"
            android:textAlignment="center"
            android:textColor="@color/Primary300"
            android:textSize="40sp" />


        <TextView
            android:id="@+id/loss_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="8dp"
            android:layout_below="@id/loss_title"
            android:text="@string/you_missed_the_lie"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/continue_to_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/loss_description"
            android:onClick="onClickContinue"
            android:text="@string/continue_to_next"
            android:textAlignment="center"
            android:textColor="@color/Primary100"
            android:textSize="22sp" />

    </RelativeLayout>




</RelativeLayout>