<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <View
        android:id="@+id/top_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorderSecondary"
        />

    <TextView
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/top_border"
        android:paddingVertical="7.5dp"
        android:background="?attr/selectableItemBackground"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/take_photo"
        />

    <TextView
        android:id="@+id/choose_from_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/take_photo"
        android:paddingVertical="7.5dp"
        android:text="@string/choose_from_library"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="?attr/selectableItemBackground">
    </TextView>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/choose_from_library"
        android:paddingVertical="7.5dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="?attr/selectableItemBackground">
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorderSecondary"
        android:layout_below="@id/take_photo"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorderSecondary"
        android:layout_below="@id/choose_from_library"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorderSecondary"
        android:layout_below="@id/cancel"
        />

</RelativeLayout>