<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/win_dialog_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="36dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/congratulations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:text="@string/congratulations"
            android:textAlignment="center"
            android:textColor="@color/Primary300"
            android:textSize="40sp" />


        <TextView
            android:id="@+id/unlocked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="8dp"
            android:layout_below="@id/congratulations"
            android:text="@string/you_caught_the_lie"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/unlocked_feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/unlocked"
            android:layout_marginVertical="18dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="26dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/Primary100"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/Secondary900"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/continue_to_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/unlocked_feature"
            android:onClick="onClickContinue"
            android:text="@string/continue_to_next"
            android:textAlignment="center"
            android:textColor="@color/Primary100"
            android:textSize="22sp" />

    </RelativeLayout>




</RelativeLayout>