<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ProgressBar
        android:id="@+id/sign_up_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/logo"
            android:layout_centerHorizontal="true" />


        <TextView
            android:id="@+id/exposure_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/logo"
            android:text="@string/exposure"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exposure_text"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_text"
            android:hint="@string/full_name"
            android:layout_marginVertical="5dp"
            app:boxBackgroundMode="outline"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/full_name_field"
            android:layout_marginVertical="5dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            style="@style/TextInputLayoutStyle">


            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_field"
            android:hint="@string/password"
            android:layout_marginVertical="5dp"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            style="@style/TextInputLayoutStyle">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_field"
            android:hint="@string/repeat_password"
            android:layout_marginVertical="5dp"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            style="@style/TextInputLayoutStyle">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/terms_of_service_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repeat_password_field"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:textSize="12sp"
            android:text="@string/terms_and_service_agreement" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/terms_of_service_checkbox"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:onClick="signUpUser"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="200dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/existing_account_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/already_have_an_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/already_have_an_account_text"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_in"
            android:textColor="#000000"
            android:onClick="startLoginActivity"
            app:cornerRadius="200dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>