<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/top_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_v2"
            >

            <TextView
                android:id="@+id/take_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingVertical="7.5dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/take_photo"
                android:textColor="@color/Secondary500"
                android:onClick="takePhoto"
                />

            <TextView
                android:id="@+id/choose_from_library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/take_photo"
                android:paddingVertical="7.5dp"
                android:text="@string/choose_from_library"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/Secondary500"
                android:onClick="chooseFromLibrary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Outline"
                android:layout_below="@id/take_photo"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_section"
            android:background="@drawable/rounded_corners_v2"
            android:layout_marginVertical="10dp"
            >

            <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingVertical="7.5dp"
                android:text="@string/cancel"
                android:textSize="20sp"
                android:textAlignment="center"
                android:backgroundTint="@color/White"
                android:textColor="@color/Secondary500"
                android:onClick="cancel"
                />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>